--- a/src/themes/ark-ui.css
+++ b/src/themes/ark-ui.css
@@ -7,9 +7,11 @@
  * This only styles the datepicker only and not the input field
  &
  * @author Ruona Matthew <rnwonder@gmail.com>
- * @version 1.2
+ * @version 1.3
  *
  */
+
+/* Note .dark selector is needed to override the default theme in dark mode */
 
 :root {
   --colors-accent-default: #eb5e41;
@@ -18,6 +20,7 @@
   --colors-fg-emphasized: #44403c;
   --colors-fg-default: #1c1917;
   --colors-fg-emphasized-reverse: #44403c;
+  --color-bg-disabled: #f3f4f4;
 
   --size-1: 0.875rem;
   --size-2: 2.25rem;
@@ -39,14 +42,25 @@
   text-transform: capitalize;
 }
 
-.date-picker-main-btn:hover {
+.date-picker-main-btn:disabled,
+.dark .date-picker-main-btn:disabled {
+  background-color: var(--color-bg-disabled);
+  color: var(--colors-fg-emphasized);
+}
+
+.date-picker-main-btn:hover,
+.dark .date-picker-main-btn:hover {
   background-color: var(--colors-bg-subtle);
 }
 
 .date-prev-next-btn:hover,
 .date-selector-trigger:hover,
 .date-prev-next-btn,
-.date-selector-trigger {
+.date-selector-trigger,
+.dark .date-prev-next-btn,
+.dark .date-selector-trigger,
+.dark .date-prev-next-btn:hover,
+.dark .date-selector-trigger:hover {
   background-color: transparent;
   color: var(--colors-fg-emphasized);
 }
@@ -66,18 +80,22 @@
   max-height: 13rem;
 }
 
-.date-selector-option {
+.date-selector-option,
+.dark .date-selector-option {
   min-height: var(--size-3);
   font-weight: 400;
   color: var(--colors-fg-emphasized);
 }
 [data-selected="true"],
-[data-selected="true"]:hover {
+[data-selected="true"]:hover,
+.dark [data-selected="true"],
+.dark [data-selected="true"]:hover {
   background-color: var(--colors-bg-subtle);
   color: var(--colors-accent-default);
 }
 
-.date-picker-weekday-name {
+.date-picker-weekday-name,
+.dark .date-picker-weekday-name {
   height: var(--size-3);
   width: var(--size-3);
   display: flex;
@@ -88,7 +106,8 @@
   color: var(--colors-fg-default);
 }
 
-.date-picker-day-number {
+.date-picker-day-number,
+.dark .date-picker-day-number {
   min-height: var(--size-3);
   min-width: var(--size-3);
   border-radius: 0.5rem;
@@ -102,7 +121,8 @@
   border: none;
 }
 
-[data-day-number-current-day="true"]::before {
+[data-day-number-current-day="true"]::before,
+.dark [data-day-number-current-day="true"]::before {
   content: "•";
   color: var(--colors-accent-default);
   position: absolute;
@@ -111,7 +131,8 @@
   font-size: 1rem;
 }
 
-[data-day-number-area-range-between="true"] {
+[data-day-number-area-range-between="true"],
+.dark [data-day-number-area-range-between="true"] {
   background-color: var(--colors-bg-subtle);
 }
 
@@ -121,13 +142,18 @@
 
 [data-day-number-selected="true"],
 [data-day-number-selected="true"]:hover,
-[data-day-number-selected="true"][data-highlight-weekend="true"] {
+[data-day-number-selected="true"][data-highlight-weekend="true"],
+.dark [data-day-number-selected="true"],
+.dark [data-day-number-selected="true"]:hover,
+.dark [data-day-number-selected="true"][data-highlight-weekend="true"] {
   background-color: var(--colors-accent-default);
   color: var(--colors-fg-inverted-default);
 }
 
 [data-day-number-range-end-hover="true"],
-[data-day-number-range-end-hover="true"]:hover {
+[data-day-number-range-end-hover="true"]:hover,
+.dark [data-day-number-range-end-hover="true"],
+.dark [data-day-number-range-end-hover="true"]:hover {
   background-color: var(--colors-bg-subtle);
   color: var(--colors-accent-default);
 }
@@ -153,5 +179,14 @@
     --colors-bg-subtle: #343434;
     --colors-fg-emphasized: #e1e1e1;
     --colors-fg-default: #e8e8e8;
+    --color-bg-disabled: #252525;
   }
+}
+
+.dark {
+  --colors-bg-subtle: #343434;
+  --colors-fg-emphasized: #e1e1e1;
+  --colors-fg-default: #e8e8e8;
+  --color-bg-disabled: #252525;
+  --before-bg: var(--colors-bg-subtle);
 }
